manifests/seraphim/prod/monitoring/HTTPRoute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: prometheus
  namespace: monitoring
spec:
  hostnames:
    - prometheus.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy-prometheus
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
